compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__bit_array.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "pub fn main() {\n  let a = 1\n  let simple = <<1, a>>\n  let complex = <<4:int-big, 5.0:little-float, 6:native-int>>\n  let assert <<7:2, 8:size(3), b:bytes-size(4)>> = <<1>>\n  let assert <<c:8-unit(1), d:bytes-size(2)-unit(2)>> = <<1>>\n\n  simple\n}\n"
---
----- SOURCE CODE
pub fn main() {
  let a = 1
  let simple = <<1, a>>
  let complex = <<4:int-big, 5.0:little-float, 6:native-int>>
  let assert <<7:2, 8:size(3), b:bytes-size(4)>> = <<1>>
  let assert <<c:8-unit(1), d:bytes-size(2)-unit(2)>> = <<1>>

  simple
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> bitstring().
main() ->
    A = 1,
    Simple = <<1, A>>,
    Complex = <<4/integer-big, 5.0/little-float, 6/native-integer>>,
    case <<1>> of
        <<7:2, 8:3, B:4/binary>> ->
            case <<1>> of
                <<C:8/unit:1, D:2/binary-unit:2>> ->
                    Simple;

                _value ->
                    erlang:error(#{
                        gleam_error => let_assert,
                        message => ~"Pattern match failed, no pattern matched the value.",
                        file => ~"project/test/my/mod.gleam",
                        module => ~"my/mod",
                        function => ~"main",
                        line => 6,
                        value => _value,
                        start => 173,
                        'end' => 232,
                        pattern_start => 184,
                        pattern_end => 224
                    })
            end;

        _value@1 ->
            erlang:error(#{
                gleam_error => let_assert,
                message => ~"Pattern match failed, no pattern matched the value.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"main",
                line => 5,
                value => _value@1,
                start => 116,
                'end' => 170,
                pattern_start => 127,
                pattern_end => 162
            })
    end.
