compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__bit_array_declare_and_use_var.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "pub fn go(x) {\n  let assert <<name_size:8, name:bytes-size(name_size)>> = x\n  name\n}"
---
----- SOURCE CODE
pub fn go(x) {
  let assert <<name_size:8, name:bytes-size(name_size)>> = x
  name
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/1]).

-spec go(bitstring()) -> bitstring().
go(X) ->
    case X of
        <<Name_size:8, Name:Name_size/binary>> ->
            Name;

        _value ->
            erlang:error(#{
                gleam_error => let_assert,
                message => ~"Pattern match failed, no pattern matched the value.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"go",
                line => 2,
                value => _value,
                start => 17,
                'end' => 75,
                pattern_start => 28,
                pattern_end => 71
            })
    end.
