compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__pattern_match_utf32_codepoint_little_endian.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  let assert <<codepoint:utf32_codepoint-little>> = x\n  codepoint\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  let assert <<codepoint:utf32_codepoint-little>> = x
  codepoint
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/1]).

-spec go(bitstring()) -> integer().
go(X) ->
    case X of
        <<Codepoint/utf32-little>> ->
            Codepoint;

        _value ->
            erlang:error(#{
                gleam_error => let_assert,
                message => ~"Pattern match failed, no pattern matched the value.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"go",
                line => 3,
                value => _value,
                start => 18,
                'end' => 69,
                pattern_start => 29,
                pattern_end => 65
            })
    end.
