compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__unicode_bit_array_2.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "\n    pub fn main() {\n        let arr = <<\"\\u{1F600}\":utf8>>\n}"
---
----- SOURCE CODE

    pub fn main() {
        let arr = <<"\u{1F600}":utf8>>
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> bitstring().
main() ->
    Arr = <<"\x{1F600}"/utf8>>.
